added more cotrollers to handle leave and duty leave

--- a/WebApp-ebuilder/Views/Home/Dashboard.cshtml
+++ b/WebApp-ebuilder/Views/Home/Dashboard.cshtml
@@ -4,5 +4,16 @@
 }
 
 <h2>Dashboard</h2>
-<div>@User.Role</div>
+<div></div>
+
+
+<div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Apply Leave", "ApplyLeave", "Leaves")</li>
+        <li>@Html.ActionLink("Apply Duty Leave", "ApplyDutyLeave", "DutyLeaves")</li>
+        <li>@Html.ActionLink("View Attendance", "ViewAttendance", "Attendance")</li>
+        <li>@Html.ActionLink("View Leaves", "ViewLeaves", "Leaves")</li>
+
+    </ul>
+</div>
 
