--- a/WebApp-ebuilder/Views/Shared/_LayoutLoggedIn.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_LayoutLoggedIn.cshtml
@@ -22,9 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>                    
-                    <li>@Html.ActionLink("Login", "Login", "Employees")</li>
-                    
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Employees")</li>
+
                 </ul>
             </div>
         </div>
