--- a/WebApp-ebuilder/Views/DutyLeaves/TrackLocation.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/TrackLocation.cshtml
@@ -55,3 +55,62 @@
 }
 
 </table>
+
+
+@section scripts {
+
+    <body>
+
+        <h1>Location</h1>
+
+        <div id="googleMap" style="width:100%;height:400px;"></div>
+
+        <script>
+
+   
+            function myMap() {
+                var mapProp = { center: new google.maps.LatLng(6.7971, 79.9019), zoom: 18 };
+                var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+
+
+            var locations = [];
+    @foreach (var tracking in Model)
+    {
+        <text>
+            var location = new google.maps.LatLng(@tracking.latitude,@tracking.longitude);
+            locations.push(location);
+            var marker = new google.maps.Marker({
+                position: { lat: @tracking.latitude, lng: @tracking.longitude },
+                map: map
+            });
+            marker.setMap(map);
+
+    </text>
+    }
+    
+        
+        var flightPath = new google.maps.Polyline({
+                path: locations,
+                strokeColor: "#0000FF",
+                strokeOpacity: 0.8,
+                strokeWeight: 2
+            });
+
+
+           
+            flightPath.setMap(map);
+
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBewol6l7X97NUVa3LgVUXBPS9i9ThbRB4&callback=myMap"></script>
+
+        <!--
+        To use this code on your website, get a free API key from Google.
+        Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
+        -->
+
+    </body>
+}_
+
+
+
