--- a/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
+++ b/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
@@ -1,9 +1,13 @@
-﻿@model WebApp_ebuilder.Models.leav
+﻿@model WebApp_ebuilder.Models.leaveApplyForm
 
 @{
     ViewBag.Title = "ApplyLeave";
 }
 
+@if(ViewBag.Message != null)
+{
+    <h3>@ViewBag.Message</h3>
+}
 <h2>ApplyLeave</h2>
 
 @using (Html.BeginForm()) 
@@ -11,21 +15,19 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        
+        <h4>leaveApplyForm</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
-
         <div class="form-group">
-            @Html.LabelFor(model => model.date,"Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.date, "Date", new { type = "date" })
+                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.reason,"Reason", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.reason, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.reason, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.reason, "", new { @class = "text-danger" })
@@ -33,15 +35,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.leaveCategory, "Leave Category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.leaveCategory, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.leaveCategory, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.leaveCategory, "", new { @class = "text-danger" })
@@ -49,16 +43,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.jobCategory,"Job Category" ,htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.jobCategory, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.jobCategory, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Apply" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
