--- a/WebApp-ebuilder/Views/DutyLeaves/ApplyDutyLeave.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/ApplyDutyLeave.cshtml
@@ -11,40 +11,50 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-       
+        <h4>duty_leave</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
+
         <div class="form-group">
-            @Html.LabelFor(model => model.date,"Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.date, new { type = "date" })
+                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.appointmentTime,"Appointment Time", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.appointmentTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.appointmentTime, "Appointment Time", new { type = "time" })
+                @Html.EditorFor(model => model.appointmentTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.appointmentTime, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.duration, "Duration", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.duration, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.duration, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.duration, "", new { @class = "text-danger" })
             </div>
         </div>
 
+        
 
         <div class="form-group">
-            @Html.LabelFor(model => model.location,"Location", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.location, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.purpose, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.purpose, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.purpose, "", new { @class = "text-danger" })
             </div>
         </div>
 
