--- a/WebApp-ebuilder/Views/Attendance/Chart.cshtml
+++ b/WebApp-ebuilder/Views/Attendance/Chart.cshtml
@@ -1,6 +1,5 @@
 ﻿<script src="~/Scripts/jquery-2.2.3.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/Chart.min.js"></script>
 
 <div id="chart_container">
@@ -12,7 +11,8 @@
     var yValues = @Html.Raw(Json.Encode(ViewBag.yValues));
 
     var ctx = $("#bar_chart");
-    var barChart = new Chart(ctx, {
+    var barChart = new Chart(ctx,
+        {
         type: 'bar',
         data: {
             labels: xValues,
