--- a/WebApp-ebuilder/Views/Attendance/ViewAttendanceChart.cshtml
+++ b/WebApp-ebuilder/Views/Attendance/ViewAttendanceChart.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_NewLayout.cshtml";
 }
 
-<h2>ViewAttendanceChart</h2>
+<h2>Attendance Chart</h2>
 
 <div>
     <canvas id="barChart" width="400" height="150"></canvas>
