--- a/WebApp-ebuilder/Views/DutyLeaves/ApplyDutyLeave.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/ApplyDutyLeave.cshtml
@@ -4,20 +4,21 @@
     ViewBag.Title = "ApplyDutyLeave";
 }
 
-<h2>ApplyDutyLeave</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
+
+    <h2>Apply Duty Leave</h2>
     
     <div class="form-horizontal">
-        <h4>duty_leave</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
 
         <div class="form-group">
-            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
+            
+            @Html.LabelFor(model => model.date,"Date", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
@@ -25,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.appointmentTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.appointmentTime,"Appointment Time", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.appointmentTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.appointmentTime, "", new { @class = "text-danger" })
@@ -33,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.endTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.endTime,"End Time", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.endTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.endTime, "", new { @class = "text-danger" })
@@ -43,15 +44,15 @@
         
 
         <div class="form-group">
-            @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.location,"Location", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.location, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.location,"", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.purpose, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.purpose,"Purpose", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.purpose, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.purpose, "", new { @class = "text-danger" })
@@ -60,12 +61,10 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Apply" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
