--- a/WebApp-ebuilder/Views/Employees/Login.cshtml
+++ b/WebApp-ebuilder/Views/Employees/Login.cshtml
@@ -66,7 +66,13 @@
                                     <input type="submit" value="Login" class="btn btn-primary btn-block" />
                                 </div>
                             </div>
-                       
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Forgot Password" class="btn btn-primary btn-block" />
+                                </div>
+                            </div>
+
                     }
 
                 </div>
