--- a/WebApp-ebuilder/Views/Employees/Profile.cshtml
+++ b/WebApp-ebuilder/Views/Employees/Profile.cshtml
@@ -1,21 +1,17 @@
-﻿@model WebApp_ebuilder.Models.employeeRegister
+﻿@model WebApp_ebuilder.Models.employee
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Profile";
 }
 
-@if (ViewBag.Message!= null)
-{
-    <h3>@ViewBag.Message</h3>
+<h2>Profile</h2>
 
-}
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Register a new Employee</h4>
+        <h4>employee</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -39,6 +35,22 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.emailVerified, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.emailVerified, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.emailVerified, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.activationCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.activationCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.activationCode, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -108,10 +120,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
