--- a/WebApp-ebuilder/Views/Home/Dashboard.cshtml
+++ b/WebApp-ebuilder/Views/Home/Dashboard.cshtml
@@ -3,17 +3,18 @@
     ViewBag.Title = "Dashboard";
 }
 
+@{ 
+    if(ViewBag.UserRole == "Managerial")
+    {
+        Layout = "~/Views/Shared/_NewLayoutManagerial.cshtml";
+
+    }
+
+}
+
 <h2>Dashboard</h2>
 <div></div>
 
 
-<div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Apply Leave", "ApplyLeave", "Leaves")</li>
-        <li>@Html.ActionLink("Apply Duty Leave", "ApplyDutyLeave", "DutyLeaves")</li>
-        <li>@Html.ActionLink("View Attendance", "ViewAttendance", "Attendance",new { EID = User.EID },new { @class = "ui-btn-right" })</li>
-        <li>@Html.ActionLink("View Leaves", "ViewLeaves", "Leaves")</li>
-        
-    </ul>
-</div>
+
 
