--- a/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
@@ -20,7 +20,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="@Url.Action("Index","Home")">eBuilder</a>
+        <a class="navbar-brand" href="@Url.Action("Dashboard","Home")">eBuilder</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                    <a class="nav-link" href="@Url.Action("Profile","Employees")">
+                    <a class="nav-link" href="@Url.Action("ViewProfile","Employees")">
                         <i class="fa fa-fw fa-user-circle"></i>
                         <span class="nav-link-text">My Profile</span>
                     </a>
