--- a/WebApp-ebuilder/Views/_ViewStart.cshtml
+++ b/WebApp-ebuilder/Views/_ViewStart.cshtml
@@ -1,4 +1,17 @@
 ﻿@{
 
-    Layout = "~/Views/Shared/_NewLayout.cshtml";
+    if (this.User.IsInRole("Managerial") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/_NewLayoutmanagerial.cshtml";
+    }
+    else if(this.User.IsInRole("HR Admin") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/_NewLayoutAdmin.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_NewLayout.cshtml";
+    }
+
+    // = "~/Views/Shared/_NewLayout.cshtml";
 }
