--- a/WebApp-ebuilder/Views/Files/Index.cshtml
+++ b/WebApp-ebuilder/Views/Files/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿
+<h2>Upload Attendace Records</h2>
+
+
 @using (Html.BeginForm("Upload", "Files", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <table>
@@ -10,7 +13,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="submit" name="Submit" value="Submit" />
+                <input type="submit" name="Submit" value="Submit" class="btn btn-primary" />
             </td>
         </tr>
     </table>
