--- a/WebApp-ebuilder/Views/Reports/Index.cshtml
+++ b/WebApp-ebuilder/Views/Reports/Index.cshtml
@@ -5,3 +5,12 @@
 
 <h2>Reports</h2>
 
+<body>
+   
+    <button onclick="location.href='@Url.Action("LeavesAppliedByWeekday")';return false;" class="btn btn-primary">
+        Leaves Applied by Weekday
+    </button>
+    
+    
+    
+</body>
