--- a/WebApp-ebuilder/Views/DutyLeaves/ViewDutyLeaves.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/ViewDutyLeaves.cshtml
@@ -56,7 +56,7 @@
             {
                 @Html.ActionLink("Edit ", "Edit", new { /* id=item.PrimaryKey */ })
                
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { DLID=item.DLID })
 
             }
 
