--- a/WebApp-ebuilder/Views/Employees/ViewProfile.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ViewProfile.cshtml
@@ -1,132 +1,122 @@
 ﻿@model WebApp_ebuilder.Models.employee
 
+@{
+    ViewBag.Title = "ViewProfile";
+}
 
-<!DOCTYPE html>
+<h2>My Profile</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ViewProfile</title>
-</head>
-<body>
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-           
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.EID, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.EID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.EID, "", new { @class = "text-danger" })
+<div>
+    <hr />
+    <div class="card">
+        <div class="card-body">
+            
+                
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.EID)
+                </div>
+                
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.EID)
+                </div>
+
+            </div>
+
+            <hr/>
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.email)
+                </div>
+
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.email)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+
+
+            <hr/>
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.dob)
+                </div>
+
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.dob)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+
+               <hr/>
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.fName)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.fName)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.emailVerified, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.emailVerified, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.emailVerified, "", new { @class = "text-danger" })
+
+            <hr/>
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.lName)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.lName)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.activationCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.activationCode, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.activationCode, "", new { @class = "text-danger" })
+
+            <hr/>
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.gender)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.gender)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.dob, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
+
+            <hr />
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.homeNo)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.homeNo)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.fName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.fName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.fName, "", new { @class = "text-danger" })
+
+            <hr />
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.street)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.street)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.lName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.lName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.lName, "", new { @class = "text-danger" })
+
+            <hr />
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.city)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.city)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.gender, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.gender, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
+
+            <hr />
+            <div class="card-deck">
+                <div class="card-header">
+                    @Html.DisplayNameFor(model => model.jobCategory)
+                </div>
+                <div class="card-body">
+                    @Html.DisplayFor(model => model.jobCategory)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.homeNo, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.homeNo, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.homeNo, "", new { @class = "text-danger" })
-                </div>
+
+
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.street, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.street, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.street, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.city, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.jobCategory, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.jobCategory, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.jobCategory, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-    
-</body>
-</html>
+    </div>
+</div>
