--- a/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
+++ b/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
@@ -4,29 +4,52 @@
     ViewBag.Title = "ApplyLeave";
 }
 
+@section Scripts{ 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>  
+<script>
+
+  $(document).ready(function() {
+      $("#date").datepicker({
+          dateFormat:"mm/dd/yy",
+          minDate: -0,
+          maxDate: "+0M +0D +10Y"
+
+      });
+  });
+</script> 
+}
+
 @if(ViewBag.Message != null)
 {
-    <h3>@ViewBag.Message</h3>
+    <div class="text-xl-center bg-secondary small">
+        <h3> @ViewBag.Message </h3>
+    </div>
 }
+
+
+<h3>Apply Leave</h3>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <h2>Apply Leave</h2>
     <div class="form-horizontal">
-        
+        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.date,"Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
+            
+
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.reason,"Reason", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.reason, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.reason, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.reason, "", new { @class = "text-danger" })
@@ -34,7 +57,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.leaveCategory,"Leave Category" ,htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.leaveCategory, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.leaveCategory, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.leaveCategory, "", new { @class = "text-danger" })
