--- a/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
@@ -20,7 +20,9 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="@Url.Action("Dashboard","Home")">eBuilder</a>
+        <div class="page-header">
+            <a class="navbar-brand" href="@Url.Action("Dashboard","Home")">eBuilder</a>
+        </div>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -125,7 +127,12 @@
                     </div>
                 </li>
                 
-                
+                <li class="nav-item">
+                    <div class="popover-header">
+                        @HttpContext.Current.User.Identity.Name
+                    </div>
+                   
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                         <i class="fa fa-fw fa-sign-out"></i>Logout
