--- a/WebApp-ebuilder/Views/Shared/_NewLayoutAdmin.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_NewLayoutAdmin.cshtml
@@ -155,6 +155,12 @@
                         <a class="dropdown-item small" href="#">View all messages</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <div class="popover-header">
+                        @HttpContext.Current.User.Identity.Name
+                    </div>
+
+                </li>
 
 
                 <li class="nav-item">
