--- a/WebApp-ebuilder/Views/Shared/_NewLayoutManagerial.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_NewLayoutManagerial.cshtml
@@ -140,6 +140,13 @@
                     </div>
                 </li>
 
+                <li class="nav-item">
+                    <div class="popover-header">
+                        @HttpContext.Current.User.Identity.Name
+                    </div>
+
+                </li>
+
 
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
