--- a/WebApp-ebuilder/Views/Approvals/Edit.cshtml
+++ b/WebApp-ebuilder/Views/Approvals/Edit.cshtml
@@ -9,15 +9,13 @@
     <div>@ViewBag.Message</div>
 }
 
-<h2>Edit</h2>
-
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>approval</h4>
+        <h4>Approve the Leave</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -54,7 +52,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ViewPendingApprovals")
 </div>
 
 @section Scripts {
