--- a/WebApp-ebuilder/Views/Approvals/ViewPendingApprovals.cshtml
+++ b/WebApp-ebuilder/Views/Approvals/ViewPendingApprovals.cshtml
@@ -1,44 +1,72 @@
-﻿@model IEnumerable<WebApp_ebuilder.Models.approval>
+﻿@model IEnumerable<WebApp_ebuilder.Models.approvalView>
 
 @{
-    ViewBag.Title = "ViewPendingApprovals";
+    ViewBag.Title = "PendingApprovals";
 }
+
+<h2>Pending Approvals</h2>
+
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.APID)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.LID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.status)
         </th>
+        
         <th>
-            @Html.DisplayNameFor(model => model.ManagerID)
+            @Html.DisplayNameFor(model => model.fName)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.lName)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.leaveCategory)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.reason)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.date)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.APID)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.LID)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.status)
         </td>
+        
         <td>
-            @Html.DisplayFor(modelItem => item.ManagerID)
+            @Html.DisplayFor(modelItem => item.fName)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.lName)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.leaveCategory)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {  APID =item.APID }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.DisplayFor(modelItem => item.reason)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.date)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { APID=item.APID})
+           
         </td>
     </tr>
 }
