--- a/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
@@ -1,4 +1,7 @@
-﻿<head>
+﻿@model WebApp_ebuilder.Models.forgotPasswordCredential
+
+
+<head>
     @Styles.Render("~/Content/vendor/bootstrap/css/bootstrap.min.css")
     @Styles.Render("~/Content/vendor/font-awesome/css/font-awesome.min.css")
     @Styles.Render("~/Content/css/sb-admin.css")
@@ -11,6 +14,11 @@
     Layout = "";
 }
 
+@if(ViewBag.Message != null)
+{
+    <div><h1>@ViewBag.Message</h1></div>
+}
+
 <body class="bg-dark">
     <div class="container">
         <div class="card card-login mx-auto mt-5">
@@ -20,17 +28,24 @@
                     <h4>Forgot your password?</h4>
                     <p>Enter your email address to send a verification code to reset your password.</p>
                 </div>
-                <form>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    @Html.LabelFor(model => model.email)
+
+                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+
                     <div class="form-group">
-                        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email address">
-                    </div>                   
                         <div class="col-md-offset-2 col-md-10">
-                            <button onclick="location.href='@Url.Action("ForgotPassword")';" class="btn btn-primary btn-block">
-                                Forgot Password
-                            </button>
+                            <input type="submit" value="Login" class="btn btn-primary btn-block" />
                         </div>
-                    
-                </form>
+                    </div>                                       
+                }
             </div>
         </div>
     </div>
