--- a/WebApp-ebuilder/Views/LeaveTypes/Create.cshtml
+++ b/WebApp-ebuilder/Views/LeaveTypes/Create.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Create";
 }
 
+@if(ViewBag.Message != null)
+{
+    <div><h3>@ViewBag.Message</h3></div>
+}
+
 <h2>Add a Leave Type</h2>
 
 @using (Html.BeginForm()) 
