--- a/WebApp-ebuilder/Views/Leaves/ViewLeaves.cshtml
+++ b/WebApp-ebuilder/Views/Leaves/ViewLeaves.cshtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="form-group">
             <label>Leaves Taken</label>
-            <canvas id="DonutChartTaken" width="600" height="500"></canvas>
+            <canvas id="DonutChart0" width="600" height="500"></canvas>
         </div>
     </div>
 </div>
@@ -13,7 +13,16 @@
     <div class="row">
         <div class="form-group">
             <label>Leaves Left</label>
-            <canvas id="DonutChartLeft" width="600" height="500"></canvas>
+            <canvas id="DonutChart1" width="600" height="500"></canvas>
+        </div>
+    </div>
+</div>
+
+<div class="col-lg-12">
+    <div class="row">
+        <div class="form-group">
+            <label>Leaves Left</label>
+            <canvas id="DonutChart2" width="600" height="500"></canvas>
         </div>
     </div>
 </div>
@@ -23,24 +32,29 @@
     <script src="~/Scripts/Common.js"></script>
     <script>
         //----Donut Chart---------
-        var c = document.getElementById("DonutChartTaken");
+        var c = document.getElementById("DonutChart0");
         debugger
         var ctx = c.getContext("2d");
-        var tData = $.getValues("/Leaves/Leavestaken");
+        var tData = $.getValues("/Leaves/LeavesCount");
         var myPieChart = new Chart(ctx, {
             type: 'doughnut',
-            data: tData,
+            data: tData[0],
         });
 
-
-
-        var c = document.getElementById("DonutChartLeft");
+        var c = document.getElementById("DonutChart1");
         debugger
         var ctx = c.getContext("2d");
-        var tData = $.getValues("/Leaves/Leavesleft");
         var myPieChart = new Chart(ctx, {
             type: 'doughnut',
-            data: tData,
+            data: tData[1],
+        });
+
+        var c = document.getElementById("DonutChart2");
+        debugger
+        var ctx = c.getContext("2d");
+        var myPieChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: tData[2],
         });
     </script>
 }
