changed javascriptserializer to jsonConvert , json conversion

--- a/WebApp-ebuilder/Views/Employees/ChangePassword.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ChangePassword.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "ChangePassword";
 }
 
+@if(ViewBag.Message != null)
+{
+    <div><h3>@ViewBag.Message</h3></div>
+}
 
 @using (Html.BeginForm()) 
 {
