--- a/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
@@ -24,10 +24,7 @@
         <div class="card card-login mx-auto mt-5">
             <div class="card-header">Reset Password</div>
             <div class="card-body">
-                <div class="text-center mt-4 mb-5">
-                    <h4>Forgot your password?</h4>
-                    <p>Enter your email address to send a verification code to reset your password.</p>
-                </div>
+                
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -35,19 +32,53 @@
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    @Html.LabelFor(model => model.email)
+                    <div class="form-check">
+                        @Html.LabelFor(model => model.email)
 
-                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                    </div>
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Login" class="btn btn-primary btn-block" />
+                    if (ViewBag.Message != null & (ViewBag.Message == "Success" | ViewBag.Message == "Error! Seems like incorret verification code"))
+                    {
+                        <div class="form-group">
+                            <div class="form-check">
+                                @Html.LabelFor(model => model.verificationCode);
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.verificationCode, new { htmlAttributes = new { @class = "form-control" } });
+                                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" });
+                                </div>
+                            </div>
                         </div>
-                    </div>                                       
-                }
+
+                        <div class="form-group">
+                            <div class="form-check">
+                                @Html.LabelFor(model => model.newPassword);
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.newPassword, new { htmlAttributes = new { @class = "form-control" } });
+                                    @Html.ValidationMessageFor(model => model.newPassword, "", new { @class = "text-danger" });
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Reset Password" class="btn btn-primary btn-block" />
+                                </div>
+                            </div>
+
+                    }
+                    else if (ViewBag.Message == null | ViewBag.Message == "Error Occured! Check the email you gave")
+                    {
+                        <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Send Verification Code" class="btn btn-primary btn-block" />
+                                </div>
+                         </div>
+                    }
+                 }
+               </div>
             </div>
-        </div>
     </div>
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
