Edit and delete employees

--- a/WebApp-ebuilder/Views/Attendance/ViewAttendance.cshtml
+++ b/WebApp-ebuilder/Views/Attendance/ViewAttendance.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "ViewAttendance";
 }
 
-<h2>ViewAttendance</h2>
+<h2>Attendance</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
