--- a/WebApp-ebuilder/Views/Leaves/ViewLeaves.cshtml
+++ b/WebApp-ebuilder/Views/Leaves/ViewLeaves.cshtml
@@ -1,60 +1,79 @@
-﻿
+﻿@model IEnumerable<WebApp_ebuilder.Models.leavWithStatusAndName>
 
-<div class="col-lg-12">
-    <div class="row">
-        <div class="form-group">
-            <label>Leaves Taken</label>
-            <canvas id="DonutChart0" width="600" height="500"></canvas>
-        </div>
-    </div>
-</div>
-
-<div class="col-lg-12">
-    <div class="row">
-        <div class="form-group">
-            <label>Leaves Left</label>
-            <canvas id="DonutChart1" width="600" height="500"></canvas>
-        </div>
-    </div>
-</div>
-
-<div class="col-lg-12">
-    <div class="row">
-        <div class="form-group">
-            <label>Leaves Left</label>
-            <canvas id="DonutChart2" width="600" height="500"></canvas>
-        </div>
-    </div>
-</div>
-
-@section scripts {
-    <script src="~/Scripts/Chart.js"></script>
-    <script src="~/Scripts/Common.js"></script>
-    <script>
-        //----Donut Chart---------
-        var c = document.getElementById("DonutChart0");
-        debugger
-        var ctx = c.getContext("2d");
-        var tData = $.getValues("/Leaves/LeavesCount");
-        var myPieChart = new Chart(ctx, {
-            type: 'doughnut',
-            data: tData[0],
-        });
-
-        var c = document.getElementById("DonutChart1");
-        debugger
-        var ctx = c.getContext("2d");
-        var myPieChart = new Chart(ctx, {
-            type: 'doughnut',
-            data: tData[1],
-        });
-
-        var c = document.getElementById("DonutChart2");
-        debugger
-        var ctx = c.getContext("2d");
-        var myPieChart = new Chart(ctx, {
-            type: 'doughnut',
-            data: tData[2],
-        });
-    </script>
+@{
+    ViewBag.Title = "ViewLeaves";
 }
+
+<h2>All Leaves</h2>
+
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.LID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.date)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.reason)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.leaveCategory)
+        </th>
+        @if (HttpContext.Current.User.IsInRole("HR Admin") | HttpContext.Current.User.IsInRole("Managerial"))
+        {
+        <th>
+            @Html.DisplayNameFor(model => model.jobCategory)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EID)
+        </th>
+        }
+        <th>
+            @Html.DisplayNameFor(model => model.status)
+        </th>
+        
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.LID)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.date)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.reason)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.leaveCategory)
+        </td>
+         @if (HttpContext.Current.User.IsInRole("HR Admin") | HttpContext.Current.User.IsInRole("Managerial"))
+         {
+        <td>
+            @Html.DisplayFor(modelItem => item.jobCategory)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EID)
+        </td>
+         }
+        <td>
+            @Html.DisplayFor(modelItem => item.status)
+        </td>
+       
+        <td>
+            @if (DateTime.Compare(item.date, DateTime.Today) > 0)
+            {
+            @Html.ActionLink("Edit  ", "Edit", new { LID=item.LID })
+            
+            
+            @Html.ActionLink("Delete", "Delete", new { LID=item.LID })
+            }
+        </td>
+    </tr>
+}
+
+</table>
