Addd employee details, updated change password, forgot password to have min 8 characters

--- a/WebApp-ebuilder/Views/DutyLeaves/ViewDutyLeaves.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/ViewDutyLeaves.cshtml
@@ -54,7 +54,7 @@
 
             @if (DateTime.Compare(item.date, DateTime.Today) >= 0)
             {
-                @Html.ActionLink("Edit ", "Edit", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit ", "Edit", new { DLID=item.DLID })
                
                 @Html.ActionLink("Delete", "Delete", new { DLID=item.DLID })
 
