--- a/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ForgotPassword.cshtml
@@ -14,12 +14,14 @@
     Layout = "";
 }
 
-@if(ViewBag.Message != null)
-{
-    <div><h1>@ViewBag.Message</h1></div>
-}
+
 
 <body class="bg-dark">
+
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-primary text-center" role="alert"><h1>@ViewBag.Message</h1></div>
+    }
     <div class="container">
         <div class="card card-login mx-auto mt-5">
             <div class="card-header">Reset Password</div>
@@ -31,32 +33,32 @@
 
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="form-check">
+                            @Html.LabelFor(model => model.email)
 
-                    <div class="form-check">
-                        @Html.LabelFor(model => model.email)
-
-                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-
                     if (ViewBag.Message != null & (ViewBag.Message == "Success" | ViewBag.Message == "Error! Seems like incorret verification code"))
                     {
                         <div class="form-group">
                             <div class="form-check">
-                                @Html.LabelFor(model => model.verificationCode);
+                                @Html.LabelFor(model => model.verificationCode)
                                 <div class="col-md-10">
-                                    @Html.EditorFor(model => model.verificationCode, new { htmlAttributes = new { @class = "form-control" } });
-                                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" });
+                                    @Html.EditorFor(model => model.verificationCode, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="form-check">
-                                @Html.LabelFor(model => model.newPassword);
+                                @Html.LabelFor(model => model.newPassword)
                                 <div class="col-md-10">
-                                    @Html.EditorFor(model => model.newPassword, new { htmlAttributes = new { @class = "form-control" } });
-                                    @Html.ValidationMessageFor(model => model.newPassword, "", new { @class = "text-danger" });
+                                    @Html.EditorFor(model => model.newPassword, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.newPassword, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
