--- a/WebApp-ebuilder/Views/Employees/ViewEmployees.cshtml
+++ b/WebApp-ebuilder/Views/Employees/ViewEmployees.cshtml
@@ -76,7 +76,7 @@
             @Html.DisplayFor(modelItem => item.jobCategory)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Details", "Details", new { EID=item.EID })
             
                 @{
                     if (HttpContext.Current.User.IsInRole("HR Admin"))
