Added more features

--- a/WebApp-ebuilder/Views/DutyLeaves/Edit.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/Edit.cshtml
@@ -6,6 +6,24 @@
 
 <h2>Edit</h2>
 
+@section Scripts{
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script>
+
+  $(document).ready(function() {
+      $("#date").datepicker({
+          dateFormat:"mm/dd/yy",
+          minDate: -0,
+          maxDate: "+0M +0D +10Y"
+
+      });
+  });
+    </script>
+}
+
+
 @if(ViewBag.Message != null)
 {
     <div>@ViewBag.Message</div>
