--- a/WebApp-ebuilder/Views/DutyLeaves/TrackLocation.cshtml
+++ b/WebApp-ebuilder/Views/DutyLeaves/TrackLocation.cshtml
@@ -4,11 +4,7 @@
     ViewBag.Title = "TrackLocation";
 }
 
-<h2>TrackLocation</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Location Trackings</h2>
 
 
 
@@ -65,7 +61,7 @@
         -->
 
     </body>
-}_
+}
 
 
 
