--- a/WebApp-ebuilder/Views/Reports/Index.cshtml
+++ b/WebApp-ebuilder/Views/Reports/Index.cshtml
@@ -19,13 +19,13 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="form-group">
-                <label>Leaves Left</label>
+                <label></label>
                 <canvas id="DonutChart1" width="400" height="400"></canvas>
             </div>
         </div>
         <div class="col-lg-6">
             <div class="form-group">
-                <label>Leaves Left</label>
+                <label></label>
                 <canvas id="DonutChart2" width="400" height="400"></canvas>
             </div>
         </div>
