--- a/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
+++ b/WebApp-ebuilder/Views/Shared/_NewLayout.cshtml
@@ -71,7 +71,7 @@
                         </li>
 
                         <li>
-                            <a href="@Url.Action("ViewDutyLeaves","DutyLeaves")">View Duty Leaves</a>
+                            <a href="@Url.Action("ViewDutyLeaves","DutyLeaves", new { EID = User.EID })">View Duty Leaves</a>
                         </li>
                     </ul>
                 </li>
@@ -83,7 +83,7 @@
                     </a>
                     <ul class="sidenav-second-level collapse" id="collapseAttendance">
                         <li>
-                            <a href="@Url.Action("ViewAttendance","Attendance")">View Attendance</a>
+                            <a href="@Url.Action("ViewAttendance","Attendance",new { EID=User.EID})">View Attendance</a>
                         </li>
 
                         <li>
