--- a/WebApp-ebuilder/Views/Approvals/Edit.cshtml
+++ b/WebApp-ebuilder/Views/Approvals/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@model WebApp_ebuilder.Models.approval
+﻿@using WebApp_ebuilder.Models
+
+@model WebApp_ebuilder.Models.approval
 
 @{
     ViewBag.Title = "Edit";
@@ -37,7 +39,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.status, new SelectList(Enum.GetValues(typeof(statuses))), new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
             </div>
         </div>
