--- a/WebApp-ebuilder/Views/Employees/Details.cshtml
+++ b/WebApp-ebuilder/Views/Employees/Details.cshtml
@@ -13,3 +13,9 @@
     Attendance Details
 </button>
 
+
+<button onclick="location.href='@Url.Action("ViewDutyLeaves", "DutyLeaves",new { EID=ViewBag.EID})'" class="btn btn-primary">
+    Duty Leave Details
+</button>
+
+
