--- a/WebApp-ebuilder/Views/Employees/Register.cshtml
+++ b/WebApp-ebuilder/Views/Employees/Register.cshtml
@@ -13,9 +13,9 @@
 
   $(document).ready(function() {
       $("#dob").datepicker({
-          dateFormat:"mm/dd/yy",
-          minDate: "-0M -0D -100Y",
-          maxDate: "+0M +0D -18Y"
+          dateFormat:"dd/mm/yy",
+          minDate: "-0D -0M -100Y",
+          maxDate: "+0D +0M -18Y"
       });
   });
     </script>
