--- a/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
+++ b/WebApp-ebuilder/Views/Leaves/ApplyLeave.cshtml
@@ -12,9 +12,9 @@
 
   $(document).ready(function() {
       $("#date").datepicker({
-          dateFormat:"mm/dd/yy",
+          dateFormat:"dd/mm/yy",
           minDate: -0,
-          maxDate: "+0M +0D +10Y"
+          maxDate: "+0D +0M +10Y"
 
       });
   });
