--- a/WebApp-ebuilder/Views/Employees/Edit.cshtml
+++ b/WebApp-ebuilder/Views/Employees/Edit.cshtml
@@ -10,14 +10,23 @@
 {
     <div>@ViewBag.Message</div>
 }
+<script>
 
+  $(document).ready(function() {
+      $("#dob").datepicker({
+          dateFormat:"dd/mm/yy",
+          minDate: "-0D -0M -100Y",
+          maxDate: "+0D +0M -18Y"
+      });
+  });
+</script>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>employee</h4>
+        <h4>Employee</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -38,15 +47,6 @@
         </div>
 
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.dob, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.fName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -66,7 +66,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.gender, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.gender,new List<SelectListItem> {
+               new SelectListItem{Text="Male", Value="Male"},
+               new SelectListItem{Text="Female", Value="Female"}
+           }, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -98,7 +101,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.jobCategory, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.jobCategory, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.jobCategory,new List<SelectListItem> {
+               new SelectListItem{Text="Non-Managerial", Value="Non-Managerial"},
+               new SelectListItem{Text="Managerial", Value="Managerial"},
+               new SelectListItem{Text="HR Admin", Value="HR Admin"}
+           } ,new { htmlAttributes = new { @class = "form-control dropdown-menu" } })
                 @Html.ValidationMessageFor(model => model.jobCategory, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -112,7 +119,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ViewEmployees")
 </div>
 
 @section Scripts {
